...
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OYl-Vd-KSQ">
                                <rect key="frame" x="-4" y="76" width="401" height="742"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create your Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qe1-tb-PhA">
                                        <rect key="frame" x="30" y="10" width="341" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signup title"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="48" id="Jcn-RP-Uqi"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="eoU-ti-a1h">
                                        <rect key="frame" x="30" y="93" width="341" height="300"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TDe-ye-67m">
                                                <rect key="frame" x="0.0" y="0.0" width="341" height="56.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="email textfield"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" textContentType="email"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="N11-rt-MQy"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter you name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OqI-EJ-D58">
                                                <rect key="frame" x="0.0" y="81.333333333333343" width="341" height="56.333333333333343"/>
                                                <accessibility key="accessibilityConfiguration" identifier="name textfield"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" textContentType="name"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="B2G-RQ-T7o"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EED-yS-8a3">
                                                <rect key="frame" x="0.0" y="162.66666666666669" width="341" height="56"/>
                                                <accessibility key="accessibilityConfiguration" identifier="password textfield"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="kXK-9T-62F"/>
                                                </connections>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaT-pH-dj0">
                                                <rect key="frame" x="0.0" y="243.66666666666671" width="341" height="56.333333333333343"/>
                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="signup button"/>
                                                <color key="tintColor" systemColor="secondarySystemBackgroundColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Signup">
                                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                                </buttonConfiguration>
                                                <userDefinedRuntimeAttributes>
...
